syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ovh.cds.sdk.grpcplugin.artifactplugin";
option java_outer_classname = "ArtifactPluginProto";
option go_package = "artifactplugin";

package artifactplugin;

import "google/protobuf/empty.proto";

// To generate the go files run: 
// protoc --go_out=plugins=grpc:. *.proto

message ArtifactPluginManifest {
    string name = 1;
    string version = 2;
    string description = 3;
    string author = 4;
}

message Options {
    map<string, string> options = 1;
}

message Result {
    string status = 1;
    string details = 2;
}

service ArtifactPlugin {
    rpc Manifest (google.protobuf.Empty) returns (ArtifactPluginManifest) {}
    rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc ArtifactUpload (Options) returns (Result) {}
    rpc ArtifactDownload (Options) returns (Result) {}
    rpc ServeStaticFiles (Options) returns (Result) {}
    rpc CachePull (Options) returns (Result) {}
    rpc CachePush (Options) returns (Result) {}
}